Send auth code controller
