# internal/api/response/response.go
@@ -2,6 +2,7 @@ package response
 
 import (
 	"encoding/json"
+	"mail-phone-auth/internal/api/data"
 	"net/http"
 )
 
@@ -15,4 +16,15 @@ func JSON[T any](w http.ResponseWriter, data *T, statusCode int) {
 func ResponseStatus(w http.ResponseWriter, statusCode int) {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(statusCode)
+}
+
+func Error(w http.ResponseWriter, msg string, statusCode int) {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(statusCode)
+
+	errorData := data.Error{
+		Message: msg,
+	}
+
+	json.NewEncoder(w).Encode(errorData)
 }
